# micronotes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: build.md  library-format.md  markdown-elements.md
fixtures/medium-library/: README.md
openspec/changes/archive/2026-06-02-bootstrap-micronotes/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-02-bootstrap-micronotes/specs/attachments/: spec.md
openspec/changes/archive/2026-06-02-bootstrap-micronotes/specs/markdown-workflow/: spec.md
openspec/changes/archive/2026-06-02-bootstrap-micronotes/specs/note-library/: spec.md
openspec/changes/archive/2026-06-02-bootstrap-micronotes/specs/note-organization/: spec.md
openspec/changes/archive/2026-06-02-bootstrap-micronotes/specs/product-vision/: spec.md
openspec/specs/attachments/: spec.md
openspec/specs/markdown-workflow/: spec.md
openspec/specs/note-library/: spec.md
openspec/specs/note-organization/: spec.md
openspec/specs/product-vision/: spec.md
packaging/: micronotes.desktop.in
src/app/: Application.cpp  Application.h  main.cpp
src/attachments/: AttachmentService.cpp  AttachmentService.h
src/editor/: MarkdownEditor.cpp  MarkdownEditor.h  SoftWrap.cpp  SoftWrap.h
src/markdown/: MarkdownParser.cpp  MarkdownParser.h  RenderModel.cpp  RenderModel.h
src/perf/: Perf.cpp  Perf.h
src/persistence/: SqliteDb.cpp  SqliteDb.h
src/platform/: DefaultOpener.cpp  DefaultOpener.h  DurableFile.cpp  DurableFile.h  PathUtils.cpp  PathUtils.h
src/ui/: AppState.cpp  AppState.h  ShellModel.cpp  ShellModel.h
src/viewer/: MarkdownViewer.cpp  MarkdownViewer.h  SdlMarkdownRenderer.cpp  SdlMarkdownRenderer.h
tests/: AppStateTests.cpp  AttachmentTests.cpp  EditorViewerTests.cpp  LibraryTests.cpp  MarkdownParserTests.cpp  PathUtilsTests.cpp  SearchTests.cpp  TestMain.cpp  TestSupport.h
tools/: PerfMain.cpp
